@startuml
scale 1200 width
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam classFontSize 18
skinparam classAttributeFontSize 16
skinparam nodesep 40
skinparam ranksep 80
skinparam arrowFontSize 18

' ========== Controller 层 ==========
together {
  class BaseMatController <<Controller>> {
    + importData(MultipartFile, boolean): AjaxResult
  }

  class BaseWarehouseController <<Controller>> {
  }

  class QualityStandardController <<Controller>> {
  }
}


' ========== Service 层 ==========
together {
  interface IBaseMatService <<Service>> {
    + selectBaseMatByMatCode(String): BaseMat
    + importMat(List, Boolean, String): String
  }

  interface IBaseWarehouseService <<Service>> {
    + getRecommendWarehouseList(String): List
  }

  interface IQualityStandardService <<Service>> {
  }
}

' ========== 实体层 ==========
together {
  class BaseMat <<Entity>> {
    - matCode: String
    - matName: String
    - safetyStock: BigDecimal
  }

  class BaseMatBom <<Entity>> {
    - fatherMatCode: String
    - childMatCode: String
    - childMatNum: BigDecimal
  }

  class BaseWarehouse <<Entity>> {
    - warehouseCode: String
    - warehouseName: String
  }

  class BaseLocation <<Entity>> {
    - warehouseCode: String
    - locationCode: String
  }

  class QualityStandard <<Entity>> {
    - standardCode: String
    - checkType: String
    - matCode: String
  }

  class QualityStandardItem <<Entity>> {
    - itemName: String
    - standardValue: String
  }
}

' === Controller → Service ===
BaseMatController -down-> IBaseMatService
BaseWarehouseController -down-> IBaseWarehouseService
QualityStandardController -down-> IQualityStandardService

' === Service → Entity ===
IBaseMatService -down..> BaseMat
IBaseWarehouseService -down..> BaseWarehouse
IQualityStandardService -down..> QualityStandard

' === Entity 间关联 ===
BaseMat "1" -- "*" BaseMatBom : BOM
BaseLocation "*" --> "1" BaseWarehouse
QualityStandard "1" *-- "*" QualityStandardItem
QualityStandard ..> BaseMat

' === 隐藏空壳类的成员分隔线 ===
hide BaseWarehouseController members
hide QualityStandardController members
hide IQualityStandardService members

@enduml

